--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 DATABASE_URL="postgresql://username:password@localhost:5432/database_name"
+DIRECT_URL="postgresql://username:password@localhost:5432/database_name"
 TMDB_API_KEY="your_api_key"
 TMDB_BASE_URL="https://api.themoviedb.org/3"
 CLERK_PUBLISHABLE_KEY="pk_test_..."
