--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,59 +1,59 @@
 {
-  "$schema": "https://json.schemastore.org/tsconfig",
-  "extends": "@tsconfig/node22/tsconfig.json",
-  "compilerOptions": {
-    /* Emit */
-    "outDir": "./dist", // Output directory for compiled files
-    "rootDir": "./src", // Root directory of source files
-    "sourceMap": true, // Generate source maps for debugging
-    "declaration": true, // Generate .d.ts declaration files
-    "declarationMap": true, // Generate source maps for declarations
-    "removeComments": true, // Remove comments in compiled output
+	"$schema": "https://json.schemastore.org/tsconfig",
+	"extends": "@tsconfig/node22/tsconfig.json",
+	"compilerOptions": {
+		/* Emit */
+		"outDir": "./dist", // Output directory for compiled files
+		"rootDir": "./src",
+		"sourceMap": true, // Generate source maps for debugging
+		"declaration": true, // Generate .d.ts declaration files
+		"declarationMap": true, // Generate source maps for declarations
+		"removeComments": true, // Remove comments in compiled output
 
-    /** Modules */
-    "typeRoots": [
-      "./node_modules/@types","./src/types"
-    ], // List of folders to resolve module names
-    
-    /* Interop Constraints */
-    "resolveJsonModule": true, // Allow importing .json files
-    "allowSyntheticDefaultImports": true, // Better interop with CommonJS modules
-    "esModuleInterop": true, // Enable compatibility with CommonJS
-    "isolatedModules": true, // Ensure each file can be transpiled independently
-    "forceConsistentCasingInFileNames": true, // Ensure consistent casing in imports
+		/** Modules */
+		"typeRoots": [
+		"./node_modules/@types","./src/types"
+		], // List of folders to resolve module names
+		
+		/* Interop Constraints */
+		"resolveJsonModule": true, // Allow importing .json files
+		"allowSyntheticDefaultImports": true, // Better interop with CommonJS modules
+		"esModuleInterop": true, // Enable compatibility with CommonJS
+		"isolatedModules": true, // Ensure each file can be transpiled independently
+		"forceConsistentCasingInFileNames": true, // Ensure consistent casing in imports
 
-    /* Type Checking - Strict Mode */
-    "strict": true, // Enable all strict type-checking options
-    "noImplicitAny": true, // Error on expressions with implied 'any' type
-    "strictNullChecks": true, // Handle null/undefined more strictly
-    "strictFunctionTypes": true, // Stricter function type checking
-    "strictBindCallApply": true, // Check bind/call/apply arguments
-    "strictPropertyInitialization": true, // Ensure class properties are initialized
-    "noImplicitThis": true, // Error on 'this' with implied 'any' type
-    "alwaysStrict": true, // Parse in strict mode and emit "use strict"
-    "useUnknownInCatchVariables": true, // Catch variables are 'unknown' instead of 'any'
+		/* Type Checking - Strict Mode */
+		"strict": true, // Enable all strict type-checking options
+		"noImplicitAny": true, // Error on expressions with implied 'any' type
+		"strictNullChecks": true, // Handle null/undefined more strictly
+		"strictFunctionTypes": true, // Stricter function type checking
+		"strictBindCallApply": true, // Check bind/call/apply arguments
+		"strictPropertyInitialization": true, // Ensure class properties are initialized
+		"noImplicitThis": true, // Error on 'this' with implied 'any' type
+		"alwaysStrict": true, // Parse in strict mode and emit "use strict"
+		"useUnknownInCatchVariables": true, // Catch variables are 'unknown' instead of 'any'
 
-    /* Additional Type Checking */
-    "noUnusedLocals": true, // Error on unused local variables
-    "noUnusedParameters": true, // Error on unused function parameters
-    "noImplicitReturns": true, // Error when not all code paths return a value
-    "noFallthroughCasesInSwitch": true, // Error on fallthrough cases in switch
-    "noUncheckedIndexedAccess": true, // Add undefined to indexed access types
-    "noImplicitOverride": true, // Require 'override' keyword for overridden methods
-    "allowUnusedLabels": false, // Error on unused labels
-    "allowUnreachableCode": false, // Error on unreachable code
-    "exactOptionalPropertyTypes": true, // Distinguish between undefined and missing properties
+		/* Additional Type Checking */
+		"noUnusedLocals": true, // Error on unused local variables
+		"noUnusedParameters": true, // Error on unused function parameters
+		"noImplicitReturns": true, // Error when not all code paths return a value
+		"noFallthroughCasesInSwitch": true, // Error on fallthrough cases in switch
+		"noUncheckedIndexedAccess": true, // Add undefined to indexed access types
+		"noImplicitOverride": true, // Require 'override' keyword for overridden methods
+		"allowUnusedLabels": false, // Error on unused labels
+		"allowUnreachableCode": false, // Error on unreachable code
+		"exactOptionalPropertyTypes": true, // Distinguish between undefined and missing properties
 
-    /* Completeness */
-    "skipLibCheck": true // Skip type checking of declaration files (faster compilation)
-  },
-  "include": [
-    "src/**/*" // Include all files in src directory
-  ],
-  "exclude": [
-    "node_modules", // Exclude node_modules
-    "dist", // Exclude output directory
-    "**/*.test.ts", // Exclude test files if using different config
-    "**/*.spec.ts"
-  ]
+		/* Completeness */
+		"skipLibCheck": true // Skip type checking of declaration files (faster compilation)
+	},
+	"include": [
+		"./src/**/*" // Include all files in src directory
+	],
+	"exclude": [
+		"./node_modules", // Exclude node_modules
+		"./dist", // Exclude output directory
+		"**/*.test.ts", // Exclude test files if using different config
+		"**/*.spec.ts"
+	]
 }
