--- a/package.json
+++ b/package.json
@@ -37,11 +37,11 @@
     "pino": "^10.0.0",
     "pino-http": "^11.0.0",
     "qs": "^6.14.0",
-    "rotating-file-stream": "^3.2.7",
+    "rotating-file-stream": "^1.4.7",
     "zod": "^4.1.11"
   },
   "devDependencies": {
-    "@biomejs/biome": "latest",
+    "@biomejs/biome": "^3.2.7",
     "@tsconfig/node22": "^22.0.2",
     "@types/compression": "^1.8.1",
     "@types/cookie-parser": "^1.4.9",
